chore(build): add JDK 21 & Gradle 8.9 full support
- Upgrade Gradle wrapper 7.6.4 → 8.9 for JDK 21 compilation and testing
- Upgrade EasyMock 4.3 → 5.2.0 (ByteBuddy-based); fixes class file major
  version 65 errors on JDK 21 (78 test failures eliminated)
- Remove unused PowerMock 2.0.9 dependency
- Force net.bytebuddy:byte-buddy/byte-buddy-agent to 1.14.18 to resolve
  version conflict between EasyMock 5.x and Guice 5.1.0
- Upgrade license plugin 0.15.0 → 0.16.1 for Gradle 8.8+ compatibility
- Fix UI lint task: use outputs.upToDateWhen and mustRunAfter(webpack) to
  satisfy Gradle 8.x implicit-dependency strict validation
- Kerberos5ShiroRealmModuleTest: replace GSSManager EasyMock class mock
  with concrete anonymous subclass (JDK module restriction workaround)
- CuratorSingletonServiceTest: use dedicated client for host1 session to
  prevent JDK 21 NIO race between TCP close and ZK NODE_DELETED events

All 1,344 tests pass under JDK 21 (BUILD SUCCESSFUL).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>